# demakein

./: .gitignore  CHANGES  LICENSE  MANIFEST.in  README  README.md  pyproject.toml  setup.py  test.sh
backyard/: design_horn.py  math.py  one_hole.py  tentacle.py
backyard/mill/: README  path.py  send.py
backyard/mill/old/: art.py  decode.py  drip.py  rouging-example-contour.prn  rouging-example-unidirectional.prn  view.py
demakein/: __init__.py  __main__.py  all.py  cgal.py  config.py  cpp.py  design.py  design_flute.py  design_shawm.py  design_whistle.py  engine_cgal.py  engine_trimesh.py  geom.py  grace.py  legion.py  make.py  make_bauble.py  make_cork.py  make_flute.py  make_mouthpiece.py  make_panpipe.py  make_reed.py  make_shawm.py  make_whistle.py  make_windcap.py  mask.py  optimize.py  pack.py  profile.py  selection.py  shape.py  sketch.py  svg.py  tune.py  workspace.py
demakein/raphs_curves/: __init__.py  bezfigs.py  bigmat.py  clothoid.py  euler-elastica.py  fromcubic.py  mecsolve.py  mvc.py  numintsynth.py  offset.py  pcorn.py  plot_solve_clothoid.py  poly3.py  polymat-bad.py  polymat.py  tocubic.py
doc/: folk-flute-and-whistle-fingering.odt  folk-shawm-fingering.odt  pflute-fingering.odt  shawm-fingering.odt  three-hole-whistle-fingering.odt
examples/: drinking_straw.py  mywhistle.py  pentatonic_flute.py  simple_flute.py  simple_reedpipe.py  simple_shawm.py  stepped_shawm.py
mill/: path.py  send.py
mill/old/: art.py  decode.py  drip.py  raster-old.py  raster.py  view.py  zero.prn
test/: design_horn.py  make_horn.py  math.py  math.txt  tentacle.py  whistle_tuning.py
